--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,39 @@
 .home {
+  display: flex;
+  & section {
+    width: 50%;
+    padding: 32px;
+  }
+  &__check-group {
+      display: flex;
+      flex-direction: column;
+  }
+  & div[role="listitem"] {
+    margin-bottom: 8px;
+  }
+  & div[role="listitem"].flat-item {
     display: flex;
-    & section {
-        width: 50%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__email-recipient {
+    margin-top: 42px;
+    &__top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 8px;
     }
+    &__title {
+      display: flex;
+      align-items: center;
+      &__icon {
+        margin-left: 8px;
+        cursor: pointer;
+      }
+    }
+    &__bottom {
+       padding-left: 8px;
+    }
+  }
 }
