--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
+  <nav>
+    <img src="assets/logo.svg" />
+  </nav>
   <router-outlet></router-outlet>
 </div>
