--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,43 @@
+$tablet-breakpoint: 768px;
+$laptop-breakpoint: 1184px;
 .home {
   display: flex;
+  padding: 52px 0;
+  @media (max-width: $tablet-breakpoint) {
+    flex-direction: column;
+  }
+  &__section-a {
+    width: 30%;
+    padding-right: 32px;
+    border-right: 1px solid lightgray;
+    @media (max-width: $laptop-breakpoint) {
+      width: 50%;
+    }
+    @media (max-width: $tablet-breakpoint) {
+      border-right: none;
+      width: 100%;
+      padding-bottom: 32px;
+      margin-bottom: 32px;
+      border-bottom: 1px solid lightgray
+    }
+  }
+  &__section-b {
+    width: 40%;
+    padding-left: 32px;
+    @media (max-width: $laptop-breakpoint) {
+      width: 50%;
+    }
+    @media (max-width: $tablet-breakpoint) {
+      width: 100%;
+      padding-left: 0;
+    }
+  }
   & section {
-    width: 50%;
-    padding: 32px;
+    padding-top: 12px;
   }
   &__check-group {
-      display: flex;
-      flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
   & div[role="listitem"] {
     margin-bottom: 8px;
@@ -33,7 +64,7 @@
       }
     }
     &__bottom {
-       padding-left: 8px;
+      padding-left: 8px;
     }
   }
 }
